test/corpus/comments.txt
================================================================================
Line comment before code
================================================================================

; this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (comment)
  (number))

================================================================================
Line comment after code
================================================================================

42 ; comment

--------------------------------------------------------------------------------

(source_file
  (number)
  (comment))

================================================================================
Multiple line comments
================================================================================

; first comment
; second comment
42

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (number))

================================================================================
Unsupported block comment before code
================================================================================

#| block comment |# 42

--------------------------------------------------------------------------------

(source_file (ERROR (UNEXPECTED '|')) (symbol) (symbol) (ERROR (UNEXPECTED '|')) (number))

================================================================================
Unsupported block comment between expressions
================================================================================

1 #| comment |# 2

--------------------------------------------------------------------------------

(source_file (number) (ERROR (UNEXPECTED '|')) (symbol) (ERROR (UNEXPECTED '|')) (number))

================================================================================
Comment inside list
================================================================================

(a ; comment
 b)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (comment)
    (symbol)))
