test/corpus/reader-extensions.txt
================================================================================
Short lambda with % placeholder
================================================================================

(map #(* % 2) xs)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (short_lambda
      (symbol)
      (symbol)
      (number))
    (symbol)))

================================================================================
Short lambda with numbered and rest placeholders
================================================================================

#(if (nil? %1) %& (+ %1 %2))

--------------------------------------------------------------------------------

(source_file
  (short_lambda
    (symbol)
    (list
      (symbol)
      (symbol))
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
Short lambda with keyword access
================================================================================

#(equal? (get % :category) "electronics")

--------------------------------------------------------------------------------

(source_file
  (short_lambda
    (symbol)
    (list
      (symbol)
      (symbol)
      (keyword))
    (string)))

================================================================================
Regex literal
================================================================================

#"[0-9]+"

--------------------------------------------------------------------------------

(source_file
  (regex))

================================================================================
Regex literal with backslash escapes
================================================================================

(re/match #"\d+" s)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (regex)
    (symbol)))

================================================================================
Regex literal with an escaped quote
================================================================================

(regex/match? #"\"[^\"]+\"" text)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (regex)
    (symbol)))

================================================================================
Regex literal matching one backslash
================================================================================

(regex/match? #"\\" text)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (regex)
    (symbol)))

================================================================================
Deref symbol
================================================================================

@count

--------------------------------------------------------------------------------

(source_file
  (deref
    (symbol)))

================================================================================
Deref inside vector
================================================================================

[:div {:x 1} @count]

--------------------------------------------------------------------------------

(source_file
  (vector
    (keyword)
    (hash_map
      (keyword)
      (number))
    (deref
      (symbol))))

================================================================================
Deref of a form
================================================================================

@(atom 1)

--------------------------------------------------------------------------------

(source_file
  (deref
    (list
      (symbol)
      (number))))

================================================================================
Shebang line
================================================================================

#!/usr/bin/env sema
(println "hi")

--------------------------------------------------------------------------------

(source_file
  (shebang)
  (list
    (symbol)
    (string)))

================================================================================
String containing a semicolon
================================================================================

(string/split line ";")

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (string)))
